2003-01-22  Chris Blumenberg  <cblu@apple.com>

	Removed comment that I added by mistake.

        Reviewed by me.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView draggingSourceOperationMaskForLocal:]):

2003-01-22  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3153651 - text dragging does not work to Terminal

        Reviewed by trey.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView draggingSourceOperationMaskForLocal:]): Terminal only accepts the drag if one of the operations is generic. Made the operation both generic and copy.

2003-01-21  Chris Blumenberg  <cblu@apple.com>

	Added support for text dragging.

        Reviewed by dave.

        * Resources/text_clipping.tiff: Added. Temp drag image until we can create an image of the selected text.
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge mayStartDragWithMouseDraggedEvent:]): renamed, we now ask if OK to drag during the drag
        * WebKit.exp: renamed element key for selected text
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebController.h: renamed element key for selected text
        * WebView.subproj/WebController.m: renamed element key for selected text
        * WebView.subproj/WebHTMLViewPrivate.h:
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _handleMouseDragged:]): added support for text dragging
        (-[WebHTMLView _mayStartDragWithMouseDragged:]): renamed, we now ask if OK to drag during the drag

2003-01-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

	- fixed 3132120 - onchange handler not firing on mac.com webmail
	
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebNSTextView resignFirstResponder]): If we really resign first responder, and
	our delegate responds to filedWillBecomeFirstResponder, then call that method.
        (-[WebNSTextView becomeFirstResponder]): If we really become first responder, and