@@ -8,9 +8,13 @@ bang-olufsen.com, MacIE
 hondacars.com, MacIE
 hondaredriders.com, MacIE
 jaguar.com, MacIE
+mazdausa.com, MacIE
 porsche.com, MacIE
+wap.sonyericsson.com, MacIE
 #
 # pretend to be Mac IE because otherwise the site tries to use layers
+nj.com, MacIE
+oregonlive.com, MacIE
 watch.com, MacIE
 #
 # pretend to be Mac IE to make the return key work to log in
@@ -25,11 +29,6 @@ battle.net, MacIE
 #
 # pretend to be Mac IE to avoid gzipped HTML which we don't support yet
 freebsd.org, MacIE
-#
-# pretend to be Mac IE to work around bug and avoid "spewage" at the bottom of some pages
-# the problems is that if the site thinks we are netscape, it tries to use layers
-oregonlive.com, MacIE
-nj.com, MacIE
 #
 # pretend to be Win IE to get the smaller font sizes the site gives for Windows
 abcnews.go.com, WinIE
